# docs/contracts/openapi.json
@@ -4663,7 +4663,8 @@
             "type": "string",
             "enum": [
               "TEXT",
-              "VOICE"
+              "VOICE",
+              "AGENT"
             ]
           },
           "client_turn_id": {
@@ -4684,6 +4685,23 @@
                 "type": "null"
               }
             ]
+          },
+          "operation_status": {
+            "anyOf": [
+              {
+                "type": "string",
+                "enum": [
+                  "PENDING"
+                ]
+              },
+              {
+                "type": "null"
+              }
+            ]
+          },
+          "simulation": {
+            "type": "boolean",
+            "const": true
           }
         },
         "required": [
@@ -4694,7 +4712,9 @@
           "channel",
           "client_turn_id",
           "created_at",
-          "operation_id"
+          "operation_id",
+          "operation_status",
+          "simulation"
         ]
       },
       "OperationOutcome": {
